--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
+    "axios": "^0.17.1",
     "core-js": "^2.4.1",
     "leaflet": "^1.2.0",
     "prop-types": "^15.6.0",
