--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.17.1",
     "core-js": "^2.4.1",
     "leaflet": "^1.2.0",
+    "moment": "^2.19.3",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
