--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "axios": "^0.17.1",
     "core-js": "^2.4.1",
+    "jquery-bar-rating": "^1.2.2",
     "leaflet": "^1.2.0",
     "moment": "^2.19.3",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-geolocated": "^2.2.1"
+    "react-geolocated": "^2.2.1",
+    "react-rating": "^0.9.0"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.41",
